// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`textBlink renders 0 1`] = `
Array [
  .c0 {
  text-blink: 0;
}

<div
    className="c0"
  />,
  .c0 {
  text-blink: 0;
}

<div
    className="c0"
  />,
  .c0 {
  text-blink: 0;
}

<div
    className="c0"
  />,
  .c0 {
  text-blink: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`textBlink renders function 1`] = `
Array [
  .c0 {
  text-blink: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  text-blink: has;
}

<div
    className="c0"
  />,
  .c0 {
  text-blink: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  text-blink: has;
}

<div
    className="c0"
  />,
]
`;

exports[`textBlink renders invalid theme path 1`] = `
Array [
  .c0 {
  text-blink: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  text-blink: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  text-blink: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  text-blink: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`textBlink renders negative number 1`] = `
Array [
  .c0 {
  text-blink: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-blink: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-blink: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  text-blink: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`textBlink renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    text-blink: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-blink: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-blink: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-blink: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    text-blink: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-blink: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-blink: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-blink: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    text-blink: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-blink: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-blink: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-blink: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    text-blink: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-blink: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-blink: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-blink: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textBlink renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    text-blink: July;
  }
}

@media April {
  .c0 {
    text-blink: August;
  }
}

@media January {
  .c0 {
    text-blink: September;
  }
}

@media April {
  .c0 {
    text-blink: November;
  }
}

@media June {
  .c0 {
    text-blink: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    text-blink: July;
  }
}

@media April {
  .c0 {
    text-blink: August;
  }
}

@media January {
  .c0 {
    text-blink: September;
  }
}

@media April {
  .c0 {
    text-blink: November;
  }
}

@media June {
  .c0 {
    text-blink: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    text-blink: January;
  }
}

@media April {
  .c0 {
    text-blink: December;
  }
}

@media January {
  .c0 {
    text-blink: April;
  }
}

@media April {
  .c0 {
    text-blink: May;
  }
}

@media June {
  .c0 {
    text-blink: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    text-blink: January;
  }
}

@media April {
  .c0 {
    text-blink: December;
  }
}

@media January {
  .c0 {
    text-blink: April;
  }
}

@media April {
  .c0 {
    text-blink: May;
  }
}

@media June {
  .c0 {
    text-blink: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textBlink renders postitive number 1`] = `
Array [
  .c0 {
  text-blink: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-blink: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-blink: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  text-blink: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`textBlink renders string 1`] = `
Array [
  .c0 {
  text-blink: July;
}

<div
    className="c0"
  />,
  .c0 {
  text-blink: July;
}

<div
    className="c0"
  />,
  .c0 {
  text-blink: June;
}

<div
    className="c0"
  />,
  .c0 {
  text-blink: June;
}

<div
    className="c0"
  />,
]
`;

exports[`textBlink renders valid theme path 1`] = `
Array [
  .c0 {
  text-blink: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  text-blink: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  text-blink: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  text-blink: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
